# aifaq

./: .env.example  LICENSE  README.md  app.py  faqs.csv  pyproject.toml  threshold_states.json
aifaq/: __init__.py  data_loader.py  embeddings.py  generator.py  retrieval.py  rl_optimizer.py
